fixed header nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html, body {
 	Common Css
 --*/
 body {
-  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   color: gray;
   background-color: #ffffff;
@@ -121,8 +121,7 @@ body {
 }
 
 a {
-  color: rgba(0, 0, 0, 0.7);
-
+  color: #212529;
 }
 
 /*
@@ -256,7 +255,10 @@ font header .navbar-default .navbar-nav li a:hover {
 
 
 /* new header styling */
-
+.nav-link {
+  display: block;
+  padding: 0rem 0.3rem;
+}
 
 header {
   background: #ffffff;
@@ -294,6 +296,7 @@ header ul li a {
   margin: 0px 10px;
   padding: 10px;
   border-radius: 5px;
+  text-transform: lowercase;
 }
 
 .nav__icon,
@@ -351,7 +354,7 @@ padding: 10px 26px;
 font-size: 15px;
 color: #151414;
 text-transform: uppercase;
-font-size: 28px;
+font-size: 2em;
 font-family: 'Scheherazade', serif;
 /* background-color: #355673; */
 /* background-image: linear-gradient(45deg, #17a2b8, #c7e7ea); */
@@ -367,13 +370,14 @@ font-weight: 800;
 .logo-subtitle {
 display: block;
 color: #202020;
-/*text-transform: uppercase; */
+text-transform: capitalize;
 font-size: 1.24em;
 margin-top: -10px;
 z-index: 100;
 /* text-shadow: 1px 1px 1px #000; */
-font-family: 'montserrat', san-serif;
-font-size: 19px;
+font-family: 'Scheherazade', serif;
+font-size: 1em;
+font-weight: 200;
 }
 
 
@@ -454,7 +458,6 @@ font-size: 19px;
 
 
 
-
 }
 
 
@@ -507,8 +510,8 @@ div#masonry {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  height: 100%;*/
-   max-width: 1000px; 
+  height: 100%;
+   max-width: 1000px; */ 
   font-size: 0;
   max-width: 8; 
 }
@@ -609,7 +612,7 @@ div#masonry:hover img:hover { opacity: 1; }
 
 .image-wrap {
   width: 100%;
-  height: 75vw;
+  /* height: 75vw; */
   margin: 0 auto;
   overflow: hidden;
   position: relative;
